<resources>
    <string name="app_name">AndroidFundamentalsSpring2023</string>
    <string name="hello_world">Hello, hello World!</string>
    <string name="login">Login</string>
    <string name="please_add_your_email_address">Please add your email address</string>
    <string name="i_agree_to_receive_your_newsletter">I agree to receive your newsletter</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="turn">Turn</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="planets">planets</string>
    <string name="open_activity1">Open Activity1</string>
    <string name="dial_action">Dial Action</string>
    <string name="open_url">Open URL</string>
    <string name="open_location">Open Location</string>
    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="get_github_users">Get Github Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_an_edittext">This is an EditText</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="start_navigationdrawer">Start NavigationDrawer</string>
    <string name="hello_i_am_in_a_cardview">Hello! I am in a CardView</string>
    <string name="sample_with_styles">Sample with Styles</string>
    <string name="insert_a_word">Insert a word</string>
    <string name="room">Room</string>
    <string name="add_word">Add Word</string>
</resources>