<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_space"
            android:background="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/hello_world"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="fitXY"
            android:src="@drawable/android" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_space"
            android:padding="@dimen/small_space"
            android:text="@string/login" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_space"
            android:background="@color/design_default_color_primary" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_add_your_email_address"
            android:inputType="textEmailAddress" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/i_agree_to_receive_your_newsletter" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/yes" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="4"
            android:rating="2"
            android:stepSize="1" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:showText="true"
            android:text="@string/turn"
            android:textOff="@string/off"
            android:textOn="@string/on"
            tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="80" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/design_default_color_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:background="@color/design_default_color_primary_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@color/white" />
        </FrameLayout>

        <Spinner
            android:id="@+id/spinnerPlanets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            android:prompt="@string/planets" />

        <WebView
            android:id="@+id/webViewAndroid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            tools:ignore="WebViewLayout" />

    </LinearLayout>
</ScrollView>